LU-3936 ldlm: ldlm_cancel_stale_locks()) ASSERTION( count > 0 ) failed

number of granted locks can be really huge.
Use 64bit math to calculate amount of locks to cancel

Change-Id: Iac0b52dd578baf9955b50597d0832ac8715895f1
Xyratex-bug-id: MRP-1296
Signed-off-by: Andriy Skulysh <Andriy_Skulysh@xyratex.com>
Reviewed-by: Alexey Lyashkov <Alexey_Lyashkov@xyratex.com>
Reviewed-by: Alexander Boyko <Alexander_Boyko@xyratex.com>
Reviewed-by: Vitaly Fertman <Vitaly_Fertman@xyratex.com>
Reviewed-on: http://review.whamcloud.com/7626
Tested-by: Hudson
Reviewed-by: Alexander Boyko <alexander_boyko@xyratex.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>